# sat-intel

./: .env.example  .gitattributes  .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_phase2_schema_26_tables.py
backend/app/: config.py  database.py  main.py  redis_client.py  seed.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  coding.py  collection.py  dashboard.py  enumerators.py  intelligence.py  surveys.py  translation.py
backend/app/core/: __init__.py  errors.py  rbac.py  security.py
backend/app/intelligence/assist/: __init__.py  coding_engine.py  llm.py  nlp_engine.py  survey_gen.py  translation.py  voice.py
backend/app/intelligence/assist/rag/: __init__.py  chunking.py  config.py  embeddings.py  ingest.py  llm.py  (+5 more)
backend/app/models/: __init__.py  audit.py  auth.py  base.py  field.py  intelligence.py  knowledge.py  response.py  session.py  survey.py
backend/app/schemas/: __init__.py  auth.py  common.py  intelligence.py  response.py  survey.py
backend/app/services/: __init__.py  analytics_service.py  collection_service.py  dashboard_service.py  events.py  survey_service.py
backend/data/kb/: .gitkeep
backend/data/seed/: .gitkeep  rbac_seed.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_adaptive.py  test_api.py  test_coding.py  test_demo_rehearsal.py  test_lang_voice.py  test_nlp.py  test_rag_assist.py  test_survey_gen.py  test_verdict_engines.py
(+15 files in other folders)
