[project]
name = "satark"
version = "0.1.0"
description = "Adaptive Survey Intelligence & Validation Layer for MoSPI/NSO"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.9",
    "python-multipart>=0.0.9",
    # assist lane (local / sovereign)
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.3",
    "httpx>=0.27",       # Ollama / Sarvam / DIID NIC calls
    "numpy>=1.26",
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.44",
    "torch>=2.2",        # MuRIL/IndicBERT extraction (Phase 5)
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "httpx>=0.27",       # AsyncClient for API tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
